# aidoku-zh-sources

./: .gitignore  .prettierrc  README.md  build.sh
public/: index.json  index.min.json
public/sources/: zh.139mh-v1.aix  zh.18mh-v1.aix  zh.55dmh-v1.aix  zh.55dmh-v2.aix  zh.bakamh-v1.aix  zh.bakamh-v2.aix  zh.baozimh-v1.aix  zh.baozimh-v2.aix  zh.baozimh1-v3.aix  zh.baozimh1-v4.aix  zh.baozimh1-v5.aix  zh.baozimh2-v1.aix  zh.baozimh2-v2.aix  zh.baozimh2-v3.aix  zh.baozimh2-v4.aix  zh.baozimh2-v5.aix  zh.baozimh2-v6.aix  zh.bilicomic-v1.aix  zh.bilicomic-v2.aix  zh.bilicomic-v3.aix  zh.cartoonmad-v1.aix  zh.cartoonmad-v2.aix  zh.copymanga-v1.aix  zh.copymanga-v10.aix  zh.copymanga-v11.aix  zh.copymanga-v12.aix  zh.copymanga-v2.aix  zh.copymanga-v3.aix  zh.copymanga-v4.aix  zh.copymanga-v5.aix  zh.copymanga-v6.aix  zh.copymanga-v7.aix  zh.copymanga-v8.aix  zh.copymanga-v9.aix  zh.dogemanga-v1.aix  zh.godamanga-v1.aix  zh.godamanga-v2.aix  zh.godamanga-v3.aix  zh.godamanga-v4.aix  zh.godamanga-v5.aix  (+55 more)
src/as/zh.55dmh/: package-lock.json  package.json
src/as/zh.baozimh/: package-lock.json  package.json
src/as/zh.dogemanga/: package-lock.json  package.json
src/as/zh.godamanga/: package-lock.json  package.json
src/as/zh.isekai/: package-lock.json  package.json
src/as/zh.mxshm/: package-lock.json  package.json
src/as/zh.se8/src/: se8.ts  (+1 more)
src/rust/zh.cartoonmad/: Cargo.toml
src/rust/zh.cartoonmad/res/: source.json
src/rust/zh.cartoonmad/src/: lib.rs
src/rust/zh.copymanga/: Cargo.toml
src/rust/zh.copymanga/res/: filters.json  source.json
src/rust/zh.copymanga/src/: crypto.rs  helper.rs  lib.rs  parser.rs
src/rust/zh.manhuabika/: Cargo.toml
src/rust/zh.manhuabika/res/: filters.json  settings.json  source.json
src/rust/zh.manhuabika/src/: crypto.rs  helper.rs  lib.rs  parser.rs
src/rust/zh.manhuadb/: Cargo.toml
src/rust/zh.manhuadb/res/: filters.json  source.json
src/rust/zh.manhuadb/src/: lib.rs
(+151 files in other folders)
