[package]
name = "copymanga-aidoku"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs", features = ["helpers"] }
aes = { version = "0.8.2", default-features = false }
cbc = { version = "0.1.2", features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
