[package]
name = "aidoku-manhuabika"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs", features = ["helpers"] }
hmac = "0.12.1"
md5 = { version = "0.7.0", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
